# phi-ollama-excel

./: README.md  manifest.xml  package-lock.json  package.json
rexcel/: Cargo.toml  README.md
rexcel/src/: cell.rs  lib.rs
rexcel/src/cells/: address.rs
src/server/: app.ts
src/taskpane/: index.tsx
src/taskpane/components/: App.tsx  SheetInsertion.tsx
src/taskpane/components/ai/: modelconn.ts
src/taskpane/components/laboratory/: ActionTest.tsx
src/taskpane/redux/store/: hook.ts  log.ts  root.ts
src/taskpane/redux/store/block/: block.ts  blockMethodName.ts  dtypes.ts
src/taskpane/redux/store/model/: dtypes.ts  model.ts  modelMethod.ts  modelMethodSheet.ts  modelMethodStatus.ts
src/taskpane/util/: address.ts
