[package]
name = "rexcel"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["Microsoft Excel", "Microsoft office JS", "WebAssembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"